application/kibana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-internal-kibana
  namespace: app-svr
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: kibana.iisquare.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
